// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PictureRandomizer custom css 1`] = `
<img
  alt="bro waving"
  onClick={[Function]}
  src="https://media.giphy.com/media/2yxkPj5mWYOGh4UYBs/giphy.gif"
  style={
    Object {
      "borderRadius": "50%",
      "height": 200,
      "width": 200,
    }
  }
/>
`;

exports[`Storyshots PictureRandomizer with images array 1`] = `
<img
  alt="bro waving"
  onClick={[Function]}
  src="https://media.giphy.com/media/2yxkPj5mWYOGh4UYBs/giphy.gif"
  style={Object {}}
/>
`;

exports[`Storyshots PictureRandomizer without props 1`] = `null`;
